--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Drum Kit</title>
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css?family=Arvo" rel="stylesheet">
+  <link rel="icon" type="image/x-icon" href="images/kick.png" />
 </head>
 
 <body>
@@ -21,6 +22,7 @@
     <button class="l drum">l</button>
   </div>
 
+  <script src="index.js" type="text/javascript" charset="utf-8"></script>
 
   <footer>
     Made with ❤️ in London.
